fix: dodano trailing slashes do linków w Footer.astro

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,22 +44,22 @@ const { data } = Astro.props;
                     <a href={prefix} title="Start">Start</a>
                   </li>
                   <li class="mil-has-children">
-                    <a href={`${prefix}/oferta`} title={data.footertxt6}
+                    <a href={`${prefix}/oferta/`} title={data.footertxt6}
                       >{data.footertxt6}</a
                     >
                   </li>
                   <li class="mil-has-children">
-                    <a href={`${prefix}/projekty`} title={data.footertxt7}
+                    <a href={`${prefix}/projekty/`} title={data.footertxt7}
                       >{data.footertxt7}</a
                     >
                   </li>
                   <li class="mil-has-children">
-                    <a href={`${prefix}/wspolpraca`} title={data.footertxt8}
+                    <a href={`${prefix}/wspolpraca/`} title={data.footertxt8}
                       >{data.footertxt8}</a
                     >
                   </li>
                   <li class="mil-has-children">
-                    <a href={`${prefix}/kontakt`} title={data.footertxt9}
+                    <a href={`${prefix}/kontakt/`} title={data.footertxt9}
                       >{data.footertxt9}</a
                     >
                   </li>
@@ -70,14 +70,14 @@ const { data } = Astro.props;
               <ul class="mil-menu-list mil-up mil-mb-60">
                 <li>
                   <a
-                    href={`${prefix}/polityka_prywatnosci`}
+                    href={`${prefix}/polityka_prywatnosci/`}
                     class="mil-light-soft"
                     title={data.footertxt10}>{data.footertxt10}</a
                   >
                 </li>
                 <li>
                   <a
-                    href={`${prefix}/polityka_cookies`}
+                    href={`${prefix}/polityka_cookies/`}
                     class="mil-light-soft"
                     title={data.footertxt11}>{data.footertxt11}</a
                   >
